# parseland

./: .gitignore  BaseGrammar.ebnf  InProgress.md  LICENSE  README.md
cpppeg/: grammar.peg  wip.txt
esrapy_py/: typedef.grammar
flexbison/: README.md  parser.yy  scanner.ll
flexbison/mingodad/: README.md  mingodad.y
flexbison/naive/: Dockerfile  scanner.generated.hh  scanner.l
naive.cpp/: CMakeLists.txt  common.h  naive.cpp  naive_test.cpp  parser.h  token.h
naive_cpp/: CMakeLists.txt  README.md  app-ast-helpers.cpp  app-ast-helpers.h  app-ast.cpp  app-ast.h  app-definitions.h  app-fwd.h  app-main.cpp  app-tokensequence.h  result.h  scanner.cpp  scanner.h  scanner_test.cpp  token.h  tresult.h
naive_cpp/CMake/: build-flags.cmake  fmtlib.cmake  google-test.cmake
